--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ function MM_swapImage() { //v3.0
        <h1>Universidad Alvart</h1>
        <div>
        <center>
-         <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagenes/alvart.jpg',1)"><img src="imagenes/alvart.png" width="247" height="204" id="Image4"></a>
+         <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagenes/alvart.jpg',1)"><center><img src="imagenes/alvart.png" width="247" height="204" id="Image4"></center></a>
        </center>
 <h2>PLAN DE ESTUDIOS </h2>
 
@@ -126,7 +126,7 @@ www.institutoalvart.com
       </div>
     <div data-role="main" class="ui-content">
        <div data-role="collapsible" data-content-theme="false">
-       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/upaep.jpg',1)"><img src="imagenes/upaep2.jpg" width="273" height="185" id="Image5"></a>
+       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagenes/upaep.jpg',1)"><center><img src="imagenes/upaep2.jpg" width="273" height="185" id="Image5"></center></a>
 <h1>Universidad UPAEP</h1>
        <div>
     <h2>PLAN DE ESTUDIOS </h2>
@@ -143,8 +143,9 @@ www.institutoalvart.com
       </div>
       </div>
    </div>
-<iframe width="360" height="215" src="https://www.youtube.com/embed/2eYjhCSNh6M" frameborder="0" allowfullscreen></iframe>
-      <div data-role="footer" data-theme="a" data-position="fixed">
+   <center>
+<iframe width="300" height="185" src="https://www.youtube.com/embed/2eYjhCSNh6M" frameborder="0" allowfullscreen></iframe>
+      </center><div data-role="footer" data-theme="a" data-position="fixed">
          <h4>Aplicacion Final, MACH</h4>
       </div>
    </div>
@@ -162,9 +163,9 @@ www.institutoalvart.com
        <h1>Universidad UTP</h1>
        <div>
     <h2>PLAN DE ESTUDIOS </h2>
-    <img src="imagenes/titulo.jpg" width="407" height="248">
+   <center> <img src="imagenes/titulo.jpg" width="407" height="248"></center>
     <br>
-<img src="imagenes/perfi1l.jpg" width="406" height="480"><br>
+<center><img src="imagenes/perfi1l.jpg" width="406" height="480"></center><br>
          <a href="http://www.utpuebla.edu.mx/divisiones/mecatronica/mecatronica/index.html">Da click aqui para ver mas informacion</a>
          </div>
       </div>
@@ -173,7 +174,7 @@ www.institutoalvart.com
        <div data-role="collapsible" data-content-theme="false">
        <h1>Universidad BUAP</h1>
        <div>
-       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image6','','imagenes/buap1.jpg',1)"><img src="imagenes/buap.jpg" width="256" height="192" id="Image6"></a>
+       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image6','','imagenes/buap1.jpg',1)"><center><img src="imagenes/buap.jpg" width="256" height="192" id="Image6"></center></a>
 <h2>Perfil de Ingreso</h2>
 <p>El aspirante a la Licenciatura en Ingeniería Mecatrónica deberá tener los siguientes atributos:
 Conocimientos básicos en el área de Ciencias Naturales y Exactas, así como  de redacción de textos. Habilidades de análisis, síntesis y autoaprendizaje. Disposición para comunicarse en un idioma extranjero, uso adecuado de los medios de información y comunicación, trabajo individual y en equipo. Interés por aplicar  la tecnología y los métodos de investigación. Búsqueda de la superación y mejora personal a partir de sus propias fortalezas y debilidades. Participación en las transformaciones de su contexto.</p>
@@ -186,7 +187,7 @@ www.mecatronica.ece.buap.mx</p>
          </div>
       </div>
       </div>
-      <iframe width="360" height="215" src="https://www.youtube.com/embed/uhgTgSHJXU8" frameborder="0" allowfullscreen></iframe>
+      <iframe width="300" height="185" src="https://www.youtube.com/embed/uhgTgSHJXU8" frameborder="0" allowfullscreen></iframe>
       <div data-role="footer" data-theme="a" data-position="fixed">
          <h4>Aplicacion Final, MACH</h4>
       </div>
@@ -206,7 +207,7 @@ www.mecatronica.ece.buap.mx</p>
        <div data-role="collapsible" data-content-theme="false">
        <h1>Universidad UNITEC</h1>
        <div>
-       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/unitec.jpg',1)"><img src="imagenes/unitec1.jpg" width="225" height="225" id="Image7"></a>
+       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagenes/unitec.jpg',1)"><center><img src="imagenes/unitec1.jpg" width="225" height="225" id="Image7"></center></a>
 <h2>PLAN DE ESTUDIOS </h2>
 <p>Nuestros planes de estudio están diseñados para formar profesionistas de excelencia académica comprometidos con la sociedad. Es a través del conjunto de conocimientos prácticos y teóricos, como desarrollarás las aptitudes necesarias para abrirte las puertas al mercado laboral.</p>
     <br>
@@ -225,7 +226,7 @@ www.mecatronica.ece.buap.mx</p>
        <div data-role="collapsible" data-content-theme="false">
        <h1>Universidad UPAEP</h1>
        <div>
-       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image8','','imagenes/upaep.jpg',1)"><img src="imagenes/upaep2.jpg" width="273" height="185" id="Image8"></a>
+       <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image8','','imagenes/upaep.jpg',1)"><center><img src="imagenes/upaep2.jpg" width="273" height="185" id="Image8"></center></a>
 <h2>PLAN DE ESTUDIOS </h2>
 <p>Nuestros planes de estudio están diseñados para formar profesionistas de excelencia académica comprometidos con la sociedad. Es a través del conjunto de conocimientos prácticos y teóricos, como desarrollarás las aptitudes necesarias para abrirte las puertas al mercado laboral.</p>
     <br>
@@ -240,7 +241,7 @@ www.mecatronica.ece.buap.mx</p>
          </div>
       </div>
       </div>
-     <center> <iframe width="360" height="215" src="https://www.youtube.com/embed/Q6qftXv5y-U" frameborder="0" allowfullscreen></iframe>
+     <center> <iframe width="300" height="185" src="https://www.youtube.com/embed/Q6qftXv5y-U" frameborder="0" allowfullscreen></iframe>
       </center><div data-role="footer" data-theme="a" data-position="fixed">
          <h4>Aplicacion Final, MACH</h4>
       </div>
