--- a/index.html
+++ b/index.html
@@ -68,6 +68,23 @@ function MM_swapImage() { //v3.0
     <p>Se muestran universidades</p>
     </a>
    </li>
+    <div data-role="main" class="ui-content">
+       <div data-role="collapsible" data-content-theme="false">
+       <h1>DESARROLLADOS POR :</h1>
+       <div>
+      <p>Miguel Angel Cardoso Hernandez<br>
+      <br>
+      CBTis 16<br>
+      <br>
+      Aplicacion final<br>
+      <br>
+      4to Semestre Grupo "H"<br>
+      <br>
+      
+      </div>
+         </div>
+      </div>
+      </div>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
    <div>
       <img src="res/android/mdpi.png" width="46" height="46">
@@ -246,7 +263,9 @@ www.mecatronica.ece.buap.mx</p>
          <h4>Aplicacion Final, MACH</h4>
       </div>
    </div>
+   
 </div>
+
 </body>
 </html>
 
