--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ function MM_swapImage() { //v3.0
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
      <h1>Carreras universitarias </h1>
    </div>
-   <!-- Start WOWSlider.com -->
-<iframe src="visor/indexwow.html" style="width:auto;height:190px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+ <!-- Start WOWSlider.com -->
+<iframe src="visor/indexwowslider.html" style="width:640px;height:360px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
+
 
 <div>
     <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-b">
