--- a/visor/indexwowslider-howto.html
+++ b/visor/indexwowslider-howto.html
@@ -106,19 +106,17 @@
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/drgdrg.jpg" alt="DRGDRG" title="DRGDRG" id="wows1_0"/></li>
-		<li><img src="data1/images/grgr.jpg" alt="GRGR" title="GRGR" id="wows1_1"/></li>
-		<li><img src="data1/images/rgrgrd.jpg" alt="RGRGRD" title="RGRGRD" id="wows1_2"/></li>
-		<li><a href="http://wowslider.com/vi"><img src="data1/images/rgrgrdgrg.jpg" alt="bootstrap carousel" title="RGRGRDGRG" id="wows1_3"/></a></li>
-		<li><img src="data1/images/uni1.jpg" alt="UNI1" title="UNI1" id="wows1_4"/></li>
+		<li><img src="data1/images/alvart.png" alt="alvart" title="alvart" id="wows1_0"/></li>
+		<li><img src="data1/images/unam.jpg" alt="unam" title="unam" id="wows1_1"/></li>
+		<li><a href="http://wowslider.com/vi"><img src="data1/images/unitec1.jpg" alt="bootstrap carousel" title="unitec1" id="wows1_2"/></a></li>
+		<li><img src="data1/images/utp.jpg" alt="utp" title="utp" id="wows1_3"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="DRGDRG"><span><img src="data1/tooltips/drgdrg.jpg" alt="DRGDRG"/>1</span></a>
-		<a href="#" title="GRGR"><span><img src="data1/tooltips/grgr.jpg" alt="GRGR"/>2</span></a>
-		<a href="#" title="RGRGRD"><span><img src="data1/tooltips/rgrgrd.jpg" alt="RGRGRD"/>3</span></a>
-		<a href="#" title="RGRGRDGRG"><span><img src="data1/tooltips/rgrgrdgrg.jpg" alt="RGRGRDGRG"/>4</span></a>
-		<a href="#" title="UNI1"><span><img src="data1/tooltips/uni1.jpg" alt="UNI1"/>5</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">jquery slideshow</a> by WOWSlider.com v8.7</div>
+		<a href="#" title="alvart"><span><img src="data1/tooltips/alvart.png" alt="alvart"/>1</span></a>
+		<a href="#" title="unam"><span><img src="data1/tooltips/unam.jpg" alt="unam"/>2</span></a>
+		<a href="#" title="unitec1"><span><img src="data1/tooltips/unitec1.jpg" alt="unitec1"/>3</span></a>
+		<a href="#" title="utp"><span><img src="data1/tooltips/utp.jpg" alt="utp"/>4</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">wowslider.com</a> by WOWSlider.com v8.7</div>
 <div class="ws_shadow"></div>
 </div>	
 <script type="text/javascript" src="engine1/wowslider.js"></script>
@@ -127,7 +125,7 @@
 
 
 <div class="instuction">
-	<p class="note">HTML code for the slider <a href="file:///C:/Users/LANIX-05/Desktop/visor/indexwow.html">C:/Users/LANIX-05/Desktop/visor/indexwow.html</a></p>
+	<p class="note">HTML code for the slider <a href="file:///C:/git/aplicacion11/visor/indexwowslider.html">C:/git/aplicacion11/visor/indexwowslider.html</a></p>
 
 	<h1>
 		How to add this slider to HTML page
@@ -137,7 +135,7 @@
 	<ul>
 		<li class="mono">data1/</li>
 		<li class="mono">engine1/</li>
-		<li class="note">Current location: <a href="file:///C:/Users/LANIX-05/Desktop/visor">C:/Users/LANIX-05/Desktop/visor</a>. <br>These folders should be located in the same folder as your html page</li>
+		<li class="note">Current location: <a href="file:///C:/git/aplicacion11/visor">C:/git/aplicacion11/visor</a>. <br>These folders should be located in the same folder as your html page</li>
 	</ul>
 
 	<h2><span class="num">2</span> Paste this code to your page between the tags <span class="mono">&lt;head&gt;&lt;/head&gt;</span></h2>
@@ -151,19 +149,17 @@
 	<textarea onclick="this.select()" rows="15">&lt;!-- Start WOWSlider.com BODY section --&gt;
 &lt;div id=&quot;wowslider-container1&quot;&gt;
 &lt;div class=&quot;ws_images&quot;&gt;&lt;ul&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/drgdrg.jpg&quot; alt=&quot;DRGDRG&quot; title=&quot;DRGDRG&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/grgr.jpg&quot; alt=&quot;GRGR&quot; title=&quot;GRGR&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/rgrgrd.jpg&quot; alt=&quot;RGRGRD&quot; title=&quot;RGRGRD&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;http://wowslider.com/vi&quot;&gt;&lt;img src=&quot;data1/images/rgrgrdgrg.jpg&quot; alt=&quot;bootstrap carousel&quot; title=&quot;RGRGRDGRG&quot; id=&quot;wows1_3&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/uni1.jpg&quot; alt=&quot;UNI1&quot; title=&quot;UNI1&quot; id=&quot;wows1_4&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/alvart.png&quot; alt=&quot;alvart&quot; title=&quot;alvart&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/unam.jpg&quot; alt=&quot;unam&quot; title=&quot;unam&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;http://wowslider.com/vi&quot;&gt;&lt;img src=&quot;data1/images/unitec1.jpg&quot; alt=&quot;bootstrap carousel&quot; title=&quot;unitec1&quot; id=&quot;wows1_2&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data1/images/utp.jpg&quot; alt=&quot;utp&quot; title=&quot;utp&quot; id=&quot;wows1_3&quot;/&gt;&lt;/li&gt;
 	&lt;/ul&gt;&lt;/div&gt;
 	&lt;div class=&quot;ws_bullets&quot;&gt;&lt;div&gt;
-		&lt;a href=&quot;#&quot; title=&quot;DRGDRG&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/drgdrg.jpg&quot; alt=&quot;DRGDRG&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;GRGR&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/grgr.jpg&quot; alt=&quot;GRGR&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;RGRGRD&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/rgrgrd.jpg&quot; alt=&quot;RGRGRD&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;RGRGRDGRG&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/rgrgrdgrg.jpg&quot; alt=&quot;RGRGRDGRG&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;UNI1&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/uni1.jpg&quot; alt=&quot;UNI1&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
-	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.net&quot;&gt;jquery slideshow&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
+		&lt;a href=&quot;#&quot; title=&quot;alvart&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/alvart.png&quot; alt=&quot;alvart&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;unam&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/unam.jpg&quot; alt=&quot;unam&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;unitec1&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/unitec1.jpg&quot; alt=&quot;unitec1&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;utp&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/utp.jpg&quot; alt=&quot;utp&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
+	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;wowslider.com&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
 &lt;div class=&quot;ws_shadow&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;	
 &lt;script type=&quot;text/javascript&quot; src=&quot;engine1/wowslider.js&quot;&gt;&lt;/script&gt;
